src/test/deca/syntax/valid/lexer/avec-objet.deca
// Description:
//    Programme avec objet
//
// Resultats:
//    a.x
//
// Historique:
//    cree le 10/01/2022
//    par Caroline

class A {
    protected int x ;
    void setX(int x) {
        this.x = x ;
    }
    int getX() {
        return x ;
    }
    void init() {
        x = 0 ;
    }
}