src/test/deca/syntax/invalid/parser/manque_acolades.deca
// Fichier avec trop peu d'acolades

// Date: 20.01.2022

{

    int a = 2;
    if (a == 2){
        if (a == 3){
            a = 5;
        a = a + 1;
    }
    return a ;

}